Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-05-14 Kimmo
 PATCH: [ 1485861 ] Czech translation - update
  Submitted by: Jan Hryz
  Src/Languages/Czech/MergeCzec.rc
 PATCH: [ 1483553 ] Swedish MergeSwedish.rc 1.304 2.5.3.7 update
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1484004 ] Manual: new Open-dialog screenshot and small fixes
  Docs/Users/Manual: Quick_start.xml
  Docs/Users/Manual/screenshots: OpenDlg1.gif
 PATCH: [ 1484013 ] Manual: small changes to Introduction chapter
  Docs/Users/Manual: Introduction.xml
 PATCH: [ 1484092 ] Manual: preliminary whats new list for 2.5
  Docs/Users/Manual: Whatsnew_2_1.xml
 PATCH: [ 1484101 ] Manual: Add index
  Docs/Users/Manual: WinMerge_help.xml
 PATCH: [ 1484142 ] Manual: update some options descriptions
  Docs/Users/Manual: Configuration.xml

2006-05-08 Kimmo
 PATCH: [ 1483344 ] Fix creating private file filters
  Src: FileFiltersDlg.cpp
 PATCH: [ 1483486 ] Add commenting for CLogFile
  Src/Common: LogFile.cpp LogFile.h

2006-05-07 Kimmo
 PATCH: [ 1483107 ] Remove dublicated code from folder compare progress dlg
  Src: DirCompProgressDlg.cpp DirCompProgressDlg.h
 PATCH: [ 1483088 ] Add GUI for user to select filter folder
  Src: FileFilterHelper.cpp FileFilterHelper.h FileFiltersDlg.cpp MainFrm.cpp Merge.rc
   OptionsDef.h OptionsInit.cpp paths.cpp paths.h PropRegistry.cpp PropRegistry.h
   resource.h
  Src/Languages/*: Merge*.rc

2006-05-06 Tim
 BUG: [ 1481053 ] Options: Text Colors should use 3D-Look too
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1482352 ] Icons for 'Bookmarks' feature
  Src: MainFrm.cpp Merge.rc resource.h
  Src/res new files: clear_bookmarks.bmp next_bookmark.bmp prev_bookmark.bmp
   toggle_bookmark.bmp
  Src/Languages/*: Merge*.rc

2006-05-06 Kimmo
 BUG: [ 1363364 ] DisplayBinaryFiles extension list wrong
  Also bump version of plugin to 1.0.3.0